// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Content 1`] = `
<div
  className="centered"
>
  <div
    className="Navigation"
  >
    <button
      className="active"
      onClick={[Function]}
    >
      Introduction
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      Model A
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      Model B
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      Net-Zero Financing
    </button>
    <button
      className=""
      onClick={[Function]}
    >
      Glossary
    </button>
  </div>
  <div
    className="Content"
  >
    <div
      className="Fields"
    >
      <div
        className="fieldset active form-group"
      >
        <h2
          className="SectionTitle"
        >
          Introduction
        </h2>
        <div
          className="SectionMain"
        >
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "The purpose of this application is to quickly estimate energy consumption of homes and small buildings in central Saskatchewan and to prepare the business case to upgrade a building to net-zero energy through PACE financing.<br><br>To use this tool, gather information for the building you would like to assess. This will include dimensions, thermal properties of the building envelope, mechanical equipment information, and electrical equipment information.",
              }
            }
          />
          <div
            className="subNavigation"
          >
            <div
              className="active SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                1
              </div>
              <button>
                Introduction
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                2
              </div>
              <button>
                Dimensions
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                3
              </div>
              <button>
                Solar
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                4
              </div>
              <button>
                Location
              </button>
            </div>
          </div>
          <div
            className="subNavigationContent"
          >
            <section
              className="Questions"
            >
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="buildingOwner"
                >
                  Building Owner
                </label>
                <input
                  className="form-control"
                  id="buildingOwner"
                  name="buildingOwner"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="address"
                >
                  Address
                </label>
                <input
                  className="form-control"
                  id="address"
                  name="address"
                  onChange={[Function]}
                  required={true}
                  type="text"
                />
              </div>
            </section>
          </div>
        </div>
        <div
          className="SectionOutput"
        >
          <img
            alt="Display of a render to help visualize dimensions."
            src="/img/render.png"
          />
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2
          className="SectionTitle"
        >
          Model A
        </h2>
        <div
          className="SectionMain"
        >
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "How is the existing home built?",
              }
            }
          />
          <div
            className="subNavigation"
          >
            <div
              className="active SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                1
              </div>
              <button>
                Build
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                2
              </div>
              <button>
                Mechanical
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                3
              </div>
              <button>
                Energy
              </button>
            </div>
          </div>
          <div
            className="subNavigationContent"
          >
            <section
              className="Questions"
            >
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="airtightness"
                >
                  Airtightness
                </label>
                <select
                  className="form-control"
                  id="airtightness"
                  name="airtightness"
                  onChange={[Function]}
                  required={true}
                  value="10 (100 years old)"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    0.6 (Passivhaus)
                  </option>
                  <option>
                    0.8
                  </option>
                  <option>
                    1.0 (Net-zero)
                  </option>
                  <option>
                    1.5
                  </option>
                  <option>
                    2.5 (NBC)
                  </option>
                  <option>
                    3
                  </option>
                  <option>
                    5
                  </option>
                  <option>
                    10 (100 years old)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    ACH @50 Pa
                  </span>
                </div>
              </div>
              <div
                className="spacer"
              >
                 
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="wallAboveGrade"
                >
                  Wall Above Grade
                </label>
                <select
                  className="form-control"
                  id="wallAboveGrade"
                  name="wallAboveGrade"
                  onChange={[Function]}
                  required={true}
                  value="R10 - 2x4 w Batt"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R1 - Uninsulated
                  </option>
                  <option>
                    R10 - 2x4 w Batt
                  </option>
                  <option>
                    R15 - 2x6 w Batt
                  </option>
                  <option>
                    R17 - NBC
                  </option>
                  <option>
                    R19 - 2x8 w Batt
                  </option>
                  <option>
                    R21 - 2x4 + 3" Rigid
                  </option>
                  <option>
                    R31 - 2x4 + 6" Rigid
                  </option>
                  <option>
                    R35 - 2x4 + 2x8 w Batt
                  </option>
                  <option>
                    R42 - 2x4 + 9.5" I-joist
                  </option>
                  <option>
                    R50 - 2x4 + 12" I-joist
                  </option>
                  <option>
                    R26 - 2x6 + 3" Rigid
                  </option>
                  <option>
                    R55 - 2x6 +12" I-joist
                  </option>
                  <option>
                    R75 - 2x6 + 16" I-joist
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="wallBelowGrade"
                >
                  Wall Below Grade
                </label>
                <select
                  className="form-control"
                  id="wallBelowGrade"
                  name="wallBelowGrade"
                  onChange={[Function]}
                  required={true}
                  value="R6 - Concrete Uninsulated"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R6 - Concrete Uninsulated
                  </option>
                  <option>
                    R13 - Conc. + 3" Rigid
                  </option>
                  <option>
                    R17 - NBC
                  </option>
                  <option>
                    R25 - Conc. + 6" Rigid
                  </option>
                  <option>
                    R37 - Conc. + 9" Rigid
                  </option>
                  <option>
                    R9 - 2x4 + Conc.
                  </option>
                  <option>
                    R14 - 2x6 + Conc.
                  </option>
                  <option>
                    R30 - 2x4 + 5.5" Batt + Conc.
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="roof"
                >
                  Roof
                </label>
                <select
                  className="form-control"
                  id="roof"
                  name="roof"
                  onChange={[Function]}
                  required={true}
                  value="R20 - 6\\""
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R1 - Uninsulated
                  </option>
                  <option>
                    R20 - 6"
                  </option>
                  <option>
                    R40 - 12"
                  </option>
                  <option>
                    R50 - NBC
                  </option>
                  <option>
                    R60 - 18"
                  </option>
                  <option>
                    R80 - 24"
                  </option>
                  <option>
                    R100 - 30"
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="floor"
                >
                  Floor
                </label>
                <select
                  className="form-control"
                  id="floor"
                  name="floor"
                  onChange={[Function]}
                  required={true}
                  value="R6 - Uninsulated [NBC Below Frost]"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R6 - Uninsulated [NBC Below Frost]
                  </option>
                  <option>
                    R11 - NBC Above Frost Line
                  </option>
                  <option>
                    R13 - 3" Rigid
                  </option>
                  <option>
                    R16 - NBC Heated Floor or Slab On Grade
                  </option>
                  <option>
                    R25 - 6" Rigid
                  </option>
                  <option>
                    R37 - 9" Rigid
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="spacer"
              >
                 
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="windows"
                >
                  Windows
                </label>
                <select
                  className="form-control"
                  id="windows"
                  name="windows"
                  onChange={[Function]}
                  required={true}
                  value="Double Pane"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    Single Pane
                  </option>
                  <option>
                    Double Pane
                  </option>
                  <option>
                    NBC
                  </option>
                  <option>
                    Improved Double Pane (Argon, Low-E)
                  </option>
                  <option>
                    Triple Pane (PVC, uninsulated)
                  </option>
                  <option>
                    Triple Pane (High Performance) - High SHGC
                  </option>
                  <option>
                    Triple Pane (High Performance) - Low SHGC
                  </option>
                  <option>
                    Triple Pane (Passivhaus)
                  </option>
                  <option>
                    Quad Pane (or Passivhaus Cold Climate)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="solidDoor"
                >
                  Solid Door
                </label>
                <select
                  className="form-control"
                  id="solidDoor"
                  name="solidDoor"
                  onChange={[Function]}
                  required={true}
                  value="Uninsulated"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    Uninsulated
                  </option>
                  <option>
                    Insulated (R10)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
            </section>
          </div>
        </div>
        <div
          className="SectionOutput"
        >
          <br />
          <br />
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2
          className="SectionTitle"
        >
          Model B
        </h2>
        <div
          className="SectionMain"
        >
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": "What improvements would you like to consider?",
              }
            }
          />
          <div
            className="subNavigation"
          >
            <div
              className="active SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                1
              </div>
              <button>
                Build
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                2
              </div>
              <button>
                Mechanical
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                3
              </div>
              <button>
                Energy
              </button>
            </div>
          </div>
          <div
            className="subNavigationContent"
          >
            <section
              className="Questions"
            >
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="airtightnessB"
                >
                  Airtightness
                </label>
                <select
                  className="form-control"
                  id="airtightnessB"
                  name="airtightnessB"
                  onChange={[Function]}
                  required={true}
                  value="1.0 (Net-zero)"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    0.6 (Passivhaus)
                  </option>
                  <option>
                    0.8
                  </option>
                  <option>
                    1.0 (Net-zero)
                  </option>
                  <option>
                    1.5
                  </option>
                  <option>
                    2.5 (NBC)
                  </option>
                  <option>
                    3
                  </option>
                  <option>
                    5
                  </option>
                  <option>
                    10 (100 years old)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    ACH @50 Pa
                  </span>
                </div>
              </div>
              <div
                className="spacer"
              >
                 
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="wallAboveGradeB"
                >
                  Wall Above Grade
                </label>
                <select
                  className="form-control"
                  id="wallAboveGradeB"
                  name="wallAboveGradeB"
                  onChange={[Function]}
                  required={true}
                  value="R31 - 2x4 + 6\\" Rigid"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R1 - Uninsulated
                  </option>
                  <option>
                    R10 - 2x4 w Batt
                  </option>
                  <option>
                    R15 - 2x6 w Batt
                  </option>
                  <option>
                    R17 - NBC
                  </option>
                  <option>
                    R19 - 2x8 w Batt
                  </option>
                  <option>
                    R21 - 2x4 + 3" Rigid
                  </option>
                  <option>
                    R31 - 2x4 + 6" Rigid
                  </option>
                  <option>
                    R35 - 2x4 + 2x8 w Batt
                  </option>
                  <option>
                    R42 - 2x4 + 9.5" I-joist
                  </option>
                  <option>
                    R50 - 2x4 + 12" I-joist
                  </option>
                  <option>
                    R26 - 2x6 + 3" Rigid
                  </option>
                  <option>
                    R55 - 2x6 +12" I-joist
                  </option>
                  <option>
                    R75 - 2x6 + 16" I-joist
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="wallBelowGradeB"
                >
                  Wall Below Grade
                </label>
                <select
                  className="form-control"
                  id="wallBelowGradeB"
                  name="wallBelowGradeB"
                  onChange={[Function]}
                  required={true}
                  value="R25 - Conc. + 6\\" Rigid"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R6 - Concrete Uninsulated
                  </option>
                  <option>
                    R13 - Conc. + 3" Rigid
                  </option>
                  <option>
                    R17 - NBC
                  </option>
                  <option>
                    R25 - Conc. + 6" Rigid
                  </option>
                  <option>
                    R37 - Conc. + 9" Rigid
                  </option>
                  <option>
                    R9 - 2x4 + Conc.
                  </option>
                  <option>
                    R14 - 2x6 + Conc.
                  </option>
                  <option>
                    R30 - 2x4 + 5.5" Batt + Conc.
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="roofB"
                >
                  Roof
                </label>
                <select
                  className="form-control"
                  id="roofB"
                  name="roofB"
                  onChange={[Function]}
                  required={true}
                  value="R80 - 24\\""
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R1 - Uninsulated
                  </option>
                  <option>
                    R20 - 6"
                  </option>
                  <option>
                    R40 - 12"
                  </option>
                  <option>
                    R50 - NBC
                  </option>
                  <option>
                    R60 - 18"
                  </option>
                  <option>
                    R80 - 24"
                  </option>
                  <option>
                    R100 - 30"
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="floorB"
                >
                  Floor
                </label>
                <select
                  className="form-control"
                  id="floorB"
                  name="floorB"
                  onChange={[Function]}
                  required={true}
                  value="R25 - 6\\" Rigid"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    R6 - Uninsulated [NBC Below Frost]
                  </option>
                  <option>
                    R11 - NBC Above Frost Line
                  </option>
                  <option>
                    R13 - 3" Rigid
                  </option>
                  <option>
                    R16 - NBC Heated Floor or Slab On Grade
                  </option>
                  <option>
                    R25 - 6" Rigid
                  </option>
                  <option>
                    R37 - 9" Rigid
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="spacer"
              >
                 
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="windowsB"
                >
                  Windows
                </label>
                <select
                  className="form-control"
                  id="windowsB"
                  name="windowsB"
                  onChange={[Function]}
                  required={true}
                  value="Triple Pane (High Performance) - Low SHGC"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    Single Pane
                  </option>
                  <option>
                    Double Pane
                  </option>
                  <option>
                    NBC
                  </option>
                  <option>
                    Improved Double Pane (Argon, Low-E)
                  </option>
                  <option>
                    Triple Pane (PVC, uninsulated)
                  </option>
                  <option>
                    Triple Pane (High Performance) - High SHGC
                  </option>
                  <option>
                    Triple Pane (High Performance) - Low SHGC
                  </option>
                  <option>
                    Triple Pane (Passivhaus)
                  </option>
                  <option>
                    Quad Pane (or Passivhaus Cold Climate)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="solidDoorB"
                >
                  Solid Door
                </label>
                <select
                  className="form-control"
                  id="solidDoorB"
                  name="solidDoorB"
                  onChange={[Function]}
                  required={true}
                  value="Insulated (R10)"
                >
                  <option
                    disabled="disabled"
                    value="disabled"
                  >
                    Select an option
                  </option>
                  <option>
                    Uninsulated
                  </option>
                  <option>
                    Insulated (R10)
                  </option>
                </select>
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    W/m²K
                  </span>
                </div>
              </div>
            </section>
          </div>
        </div>
        <div
          className="SectionOutput"
        >
          <br />
          <br />
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2
          className="SectionTitle"
        >
          Net-Zero Financing
        </h2>
        <div
          className="SectionMain"
        >
          <p
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="subNavigation"
          >
            <div
              className="active SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                1
              </div>
              <button>
                Net-Zero Financing
              </button>
            </div>
            <div
              className="SubNavigationButton"
              onClick={[Function]}
            >
              <div
                className="Step"
              >
                2
              </div>
              <button>
                Business Case
              </button>
            </div>
          </div>
          <div
            className="subNavigationContent"
          >
            <section
              className="Questions"
            >
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="designCost"
                >
                  Design Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={0}
                  id="designCost"
                  name="designCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="designQuantity"
                >
                  Design Quantity
                </label>
                <input
                  className="form-control"
                  defaultValue={1}
                  id="designQuantity"
                  name="designQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="airtightnessCost"
                >
                  Airtightness Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={10}
                  id="airtightnessCost"
                  name="airtightnessCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of envelope
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="airtightnessQuantity"
                >
                  Airtightness Quantity
                   (Calculated: 420.6)
                </label>
                <input
                  className="form-control"
                  id="airtightnessQuantity"
                  name="airtightnessQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    m² of envelope
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="windowsCost"
                >
                  Windows Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={400}
                  id="windowsCost"
                  name="windowsCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of window
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="windowsQuantity"
                >
                  Windows Quantity
                   (Calculated: 28.0)
                </label>
                <input
                  className="form-control"
                  id="windowsQuantity"
                  name="windowsQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    m² of window
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="insulationCost"
                >
                  Insulation Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={25}
                  id="insulationCost"
                  name="insulationCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of envelope
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="insulationQuantity"
                >
                  Insulation Quantity
                   (Calculated: 420.6)
                </label>
                <input
                  className="form-control"
                  id="insulationQuantity"
                  name="insulationQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    m² of envelope
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="ventilationCost"
                >
                  Ventilation with Energy Recovery (ERV/HRV) Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={4000}
                  id="ventilationCost"
                  name="ventilationCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="ventilationQuantity"
                >
                  Ventilation with Energy Recovery (ERV/HRV) Quantity
                </label>
                <input
                  className="form-control"
                  defaultValue={1}
                  id="ventilationQuantity"
                  name="ventilationQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="heatPumpCost"
                >
                  Heat Pump Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={5000}
                  id="heatPumpCost"
                  name="heatPumpCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of envelope
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="heatPumpQuantity"
                >
                  Heat Pump Quantity
                </label>
                <input
                  className="form-control"
                  defaultValue={1}
                  id="heatPumpQuantity"
                  name="heatPumpQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="waterHeaterCost"
                >
                  Water Heater, Drain Water Heat Recovery Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={2000}
                  id="waterHeaterCost"
                  name="waterHeaterCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of window
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="waterHeaterQuantity"
                >
                  Water Heater, Drain Water Heat Recovery Quantity
                </label>
                <input
                  className="form-control"
                  defaultValue={1}
                  id="waterHeaterQuantity"
                  name="waterHeaterQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="solarCost"
                >
                  Solar PV 13.3 kW Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={412}
                  id="solarCost"
                  name="solarCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of solar
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="solarQuantity"
                >
                  Solar PV 13.3 kW Quantity
                   (Calculated: 64.4)
                </label>
                <input
                  className="form-control"
                  id="solarQuantity"
                  name="solarQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    m² of solar
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="batteryCost"
                >
                  Battery Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={0}
                  id="batteryCost"
                  name="batteryCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $/m² of solar
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="batteryQuantity"
                >
                  Battery Quantity
                </label>
                <input
                  className="form-control"
                  id="batteryQuantity"
                  name="batteryQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    m² of solar
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="energyMonitorCost"
                >
                  Energy Monitor Unit Cost (Installed)
                </label>
                <input
                  className="form-control"
                  defaultValue={300}
                  id="energyMonitorCost"
                  name="energyMonitorCost"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
                <div
                  className="input-group-append"
                >
                  <span
                    className="input-group-text"
                  >
                    $
                  </span>
                </div>
              </div>
              <div
                className="input-group"
              >
                <label
                  className=""
                  htmlFor="energyMonitorQuantity"
                >
                  Energy Monitor Quantity
                </label>
                <input
                  className="form-control"
                  defaultValue={1}
                  id="energyMonitorQuantity"
                  name="energyMonitorQuantity"
                  onChange={[Function]}
                  required={false}
                  type="number"
                />
              </div>
            </section>
          </div>
        </div>
        <div
          className="SectionOutput"
        >
          
        </div>
      </div>
      <div
        className="fieldset  form-group"
      >
        <h2
          className="SectionTitle"
        >
          Glossary
        </h2>
        <div
          className="SectionMain Glossary"
        >
          <div
            className="subNavigationContent"
          >
            <h3>
              How to use this tool
            </h3>
            <p>
              Gather information for the building you would like to assess. This will include:
            </p>
            <ol>
              <li>
                <strong>
                  Dimensions
                </strong>
                 (overall length, width, height above grade, depth below grade, window areas) - results will be most accurate for a rectangular building as shown below, overrides can be made to accommodate L-shaped and U-shaped buildings.
              </li>
              <li>
                Thermal properties of the 
                <strong>
                  building envelope
                </strong>
                 (walls, windows, roof, floor)
              </li>
              <li>
                <strong>
                  Mechanical equipment
                </strong>
                 information (heating, cooling, ventilation, hot water)
              </li>
              <li>
                <strong>
                  Electrical equipment
                </strong>
                 information (lighting, appliances)
              </li>
            </ol>
            <h3>
              General Notes
            </h3>
            <p>
              Do not perform any retrofit work without considering air, vapour and weather barrier detailing.
            </p>
            <p>
              Grant applications will require a pre-retrofit energy audit. Please contact your Energy Advisor before you begin work.
            </p>
            <p>
              A HOT2000 energy model will need to be prepared for grant and financing.
            </p>
            <p>
              More complex energy analysis can be prepared in PHPP, HOT2000 or IESVE.
            </p>
            <p>
              We recommend choosing construction materials with low embodied carbon.
            </p>
            <h3>
              Glossary
            </h3>
            <dl>
              <div
                className="row"
              >
                <dt>
                  °C
                </dt>
                <dd>
                  degree Celsius, temperature scale
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  a
                </dt>
                <dd>
                  annum, per year
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  ACH, 1/h
                </dt>
                <dd>
                  Air Changes per Hour, used to describe the air leakage during a blower door test, also used to describe ventilation rates. One air change per hour is the volume of the room being fully replaced every hour.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  batt
                </dt>
                <dd>
                  batt insulation, this could be mineral wool, fibreglass or sheeps wool
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  BTU
                </dt>
                <dd>
                  British Thermal Units, rate: 1 watt = 3.41 BTU per hour, quantity: 1 watt*hour = 3.41 BTU
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  Conc. 
                </dt>
                <dd>
                  concrete
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  effective vs nominal values
                </dt>
                <dd>
                  effective U-values take into account thermal bridging and other aspects that reduce performance rather than nominal performance stated by the manufacture on the packaging for the insulation alone
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  embodied carbon
                </dt>
                <dd>
                  total of greenhouse gas emissions that are caused by the manufacture and supply of construction products and materials, as well as the construction process itself
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  Energuide
                </dt>
                <dd>
                  energy efficiency rating system maintained by the Government of Canada and Natural Resources Canada (NRCan)
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  GJ
                </dt>
                <dd>
                  gigajoule, 1000 megajoules, or 1 billion joules, unit of energy
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  h
                </dt>
                <dd>
                  hours
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  heat pump
                </dt>
                <dd>
                  efficient electric heating system that function based on refrigeration (similar to an air conditioner in reverse, and can provide cooling in the summer), they can be air source or geothermal, they will often require an electric backup heater
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  Heating degree days
                </dt>
                <dd>
                  Heating degree day is a measurement designed to quantify the demand for energy needed to heat a building. HDD is derived from measurements of outside air temperature. The heating requirements for a given building at a specific location are considered to be directly proportional to the number of HDD at that location.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  Heating degree hours
                </dt>
                <dd>
                  similar to heating degree days but measured in hours, heating degree days x 24
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  HELP, Home Energy Loan Program
                </dt>
                <dd>
                  <a
                    href="https://www.saskatoon.ca/engage/home-energy-loan-program-help"
                    rel="noreferrer"
                    target="_blank"
                  >
                    Saskatoon Home Energy Loan Program
                  </a>
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  I-joist
                </dt>
                <dd>
                  I-joists are strong, lightweight, "I" shaped engineered wood structural members that are typically used for floor structures. In net-zero retofits they can be used to create an insulation cavity around an existing home.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  K
                </dt>
                <dd>
                  Kelvin absolute temperature scale 0 K = -273 °C, a change of 1 K equals a change of 1 °C
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  k, kilo
                </dt>
                <dd>
                  prefix meaning 1000, one thousand
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  kW
                </dt>
                <dd>
                  kilowatts, 1000 watts, power, rate of energy consumption, 1000 joules per second
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  kWh
                </dt>
                <dd>
                  kilowatt*hour, 1000 watt*hours, energy quantity, 1 kilowatt load running for 1 hour, equal to 3.6 megajoules
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  MJ
                </dt>
                <dd>
                  megajoule, another metric unit of energy quantity, one million joules, 3.6 kilowatt*hours
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  MURB
                </dt>
                <dd>
                  multi-unit residential building, an apartment or condominium building
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  net-zero energy
                </dt>
                <dd>
                  A net zero energy home is very energy efficient, it only uses as much energy as it can produce from on-site renewable energy throughout the year. A variation is net-zero carbon.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  PACE Financing
                </dt>
                <dd>
                  Loans would be provided by the City to be used for energy efficiency retrofits and energy generation on residential properties.  This financing is different than a regular loan as it is tied to a property, not an individual, and therefore has no impact on credit ratings, mortgage limits or other individual debt limits.  Loans would be paid back to the City through property taxes. See City of Saskatoon Home Energy Loan Program (HELP)
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  passivhaus
                </dt>
                <dd>
                  Passivhaus is a voluntary sustainable building standard which results in buildings that require very little energy for space heating or cooling.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  rigid
                </dt>
                <dd>
                  Rigid insulation, we recommend mineral wool (Rockwool Comfortboard) since it is vapour permeable and allows drying. Expanded polystyrene (EPS) is another option. Wood fibre insulation is emerging as low embodied carbon option.
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  R-value
                </dt>
                <dd>
                  thermal resistance, higher is better, the ability of an assembly to prevent heat flow, R-value is the inverse of U-value, R = 1/U
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  SHGC
                </dt>
                <dd>
                  solar heat gain coefficient, defines how much solar gain is allowed in through a window, high solar gain 50% (for passive solar design), low solar gain 30% (if overheating is a risk)
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  U-value
                </dt>
                <dd>
                  thermal transmittance or heat transfer coefficient, lower is better, the amount of heat that moves through an assembly for a unit area and temperature difference, U-value is the inverse of R-value, U = 1/R
                </dd>
              </div>
            </dl>
            <h3>
              Conversion Table
            </h3>
            <dl>
              <div
                className="row"
              >
                <dt>
                  1 m
                </dt>
                <dd>
                  3.28 ft
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  1 m²
                </dt>
                <dd>
                  10.8 ft²
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  U-value [metric] 
                </dt>
                <dd>
                  5.678 / R-value [imperial]
                </dd>
              </div>
              <div
                className="row"
              >
                <dt>
                  R-value [imperial]
                </dt>
                <dd>
                  5.678 / U-value [metric]
                </dd>
              </div>
            </dl>
            <img
              alt="Conversion table for U <> R"
              src="/img/conversion.png"
            />
            <h3>
              Technical Notes
            </h3>
            <ol>
              <li>
                Insulation effective R-values account for NBC 9.36 typical framing percentages.
              </li>
              <li>
                Contact 
                <a
                  href="https://brightbuildings.ca/"
                  rel="noreferrer"
                  target="_blank"
                >
                  Bright Buildings
                </a>
                 for photos, details and schematics designs.
              </li>
            </ol>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders formatQuestion with float question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="questionFloat"
  >
    Float
  </label>
  <input
    className="form-control"
    id="questionFloat"
    name="questionFloat"
    onChange={[Function]}
    required={true}
    type="number"
  />
</div>
`;

exports[`renders formatQuestion with gap question 1`] = `
<div
  className="spacer"
>
   
</div>
`;

exports[`renders formatQuestion with integer question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question2Key"
  >
    Integer
  </label>
  <input
    className="form-control"
    id="question2Key"
    name="question2Key"
    onChange={[Function]}
    required={false}
    type="number"
  />
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with select question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question5Key"
  >
    Select
  </label>
  <select
    className="form-control"
    id="question5Key"
    name="question5Key"
    onChange={[Function]}
    required={false}
    value="disabled"
  >
    <option
      disabled="disabled"
      value="disabled"
    >
      Select an option
    </option>
    <option>
      Electricity
    </option>
    <option>
      Clean Electricity
    </option>
    <option>
      Natural Gass (Fossil)
    </option>
    <option>
      Clean Gas
    </option>
    <option>
      Propane
    </option>
    <option>
      Wood Pellets
    </option>
  </select>
  <div
    className="input-group-append"
  >
    <span
      className="input-group-text"
    >
      IBU
    </span>
  </div>
</div>
`;

exports[`renders formatQuestion with text question 1`] = `
<div
  className="input-group"
>
  <label
    className=""
    htmlFor="question3Key"
  >
    Text Label
  </label>
  <input
    className="form-control"
    id="question3Key"
    name="question3Key"
    onChange={[Function]}
    required={true}
    type="text"
  />
</div>
`;

exports[`renders getGlossarySection 1`] = `
<div
  className="fieldset active form-group"
>
  <h2
    className="SectionTitle"
  >
    Glossary
  </h2>
  <div
    className="SectionMain Glossary"
  >
    <div
      className="subNavigationContent"
    >
      <h3>
        How to use this tool
      </h3>
      <p>
        Gather information for the building you would like to assess. This will include:
      </p>
      <ol>
        <li>
          <strong>
            Dimensions
          </strong>
           (overall length, width, height above grade, depth below grade, window areas) - results will be most accurate for a rectangular building as shown below, overrides can be made to accommodate L-shaped and U-shaped buildings.
        </li>
        <li>
          Thermal properties of the 
          <strong>
            building envelope
          </strong>
           (walls, windows, roof, floor)
        </li>
        <li>
          <strong>
            Mechanical equipment
          </strong>
           information (heating, cooling, ventilation, hot water)
        </li>
        <li>
          <strong>
            Electrical equipment
          </strong>
           information (lighting, appliances)
        </li>
      </ol>
      <h3>
        General Notes
      </h3>
      <p>
        Do not perform any retrofit work without considering air, vapour and weather barrier detailing.
      </p>
      <p>
        Grant applications will require a pre-retrofit energy audit. Please contact your Energy Advisor before you begin work.
      </p>
      <p>
        A HOT2000 energy model will need to be prepared for grant and financing.
      </p>
      <p>
        More complex energy analysis can be prepared in PHPP, HOT2000 or IESVE.
      </p>
      <p>
        We recommend choosing construction materials with low embodied carbon.
      </p>
      <h3>
        Glossary
      </h3>
      <dl>
        <div
          className="row"
        >
          <dt>
            °C
          </dt>
          <dd>
            degree Celsius, temperature scale
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            a
          </dt>
          <dd>
            annum, per year
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            ACH, 1/h
          </dt>
          <dd>
            Air Changes per Hour, used to describe the air leakage during a blower door test, also used to describe ventilation rates. One air change per hour is the volume of the room being fully replaced every hour.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            batt
          </dt>
          <dd>
            batt insulation, this could be mineral wool, fibreglass or sheeps wool
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            BTU
          </dt>
          <dd>
            British Thermal Units, rate: 1 watt = 3.41 BTU per hour, quantity: 1 watt*hour = 3.41 BTU
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            Conc. 
          </dt>
          <dd>
            concrete
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            effective vs nominal values
          </dt>
          <dd>
            effective U-values take into account thermal bridging and other aspects that reduce performance rather than nominal performance stated by the manufacture on the packaging for the insulation alone
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            embodied carbon
          </dt>
          <dd>
            total of greenhouse gas emissions that are caused by the manufacture and supply of construction products and materials, as well as the construction process itself
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            Energuide
          </dt>
          <dd>
            energy efficiency rating system maintained by the Government of Canada and Natural Resources Canada (NRCan)
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            GJ
          </dt>
          <dd>
            gigajoule, 1000 megajoules, or 1 billion joules, unit of energy
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            h
          </dt>
          <dd>
            hours
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            heat pump
          </dt>
          <dd>
            efficient electric heating system that function based on refrigeration (similar to an air conditioner in reverse, and can provide cooling in the summer), they can be air source or geothermal, they will often require an electric backup heater
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            Heating degree days
          </dt>
          <dd>
            Heating degree day is a measurement designed to quantify the demand for energy needed to heat a building. HDD is derived from measurements of outside air temperature. The heating requirements for a given building at a specific location are considered to be directly proportional to the number of HDD at that location.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            Heating degree hours
          </dt>
          <dd>
            similar to heating degree days but measured in hours, heating degree days x 24
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            HELP, Home Energy Loan Program
          </dt>
          <dd>
            <a
              href="https://www.saskatoon.ca/engage/home-energy-loan-program-help"
              rel="noreferrer"
              target="_blank"
            >
              Saskatoon Home Energy Loan Program
            </a>
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            I-joist
          </dt>
          <dd>
            I-joists are strong, lightweight, "I" shaped engineered wood structural members that are typically used for floor structures. In net-zero retofits they can be used to create an insulation cavity around an existing home.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            K
          </dt>
          <dd>
            Kelvin absolute temperature scale 0 K = -273 °C, a change of 1 K equals a change of 1 °C
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            k, kilo
          </dt>
          <dd>
            prefix meaning 1000, one thousand
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            kW
          </dt>
          <dd>
            kilowatts, 1000 watts, power, rate of energy consumption, 1000 joules per second
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            kWh
          </dt>
          <dd>
            kilowatt*hour, 1000 watt*hours, energy quantity, 1 kilowatt load running for 1 hour, equal to 3.6 megajoules
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            MJ
          </dt>
          <dd>
            megajoule, another metric unit of energy quantity, one million joules, 3.6 kilowatt*hours
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            MURB
          </dt>
          <dd>
            multi-unit residential building, an apartment or condominium building
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            net-zero energy
          </dt>
          <dd>
            A net zero energy home is very energy efficient, it only uses as much energy as it can produce from on-site renewable energy throughout the year. A variation is net-zero carbon.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            PACE Financing
          </dt>
          <dd>
            Loans would be provided by the City to be used for energy efficiency retrofits and energy generation on residential properties.  This financing is different than a regular loan as it is tied to a property, not an individual, and therefore has no impact on credit ratings, mortgage limits or other individual debt limits.  Loans would be paid back to the City through property taxes. See City of Saskatoon Home Energy Loan Program (HELP)
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            passivhaus
          </dt>
          <dd>
            Passivhaus is a voluntary sustainable building standard which results in buildings that require very little energy for space heating or cooling.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            rigid
          </dt>
          <dd>
            Rigid insulation, we recommend mineral wool (Rockwool Comfortboard) since it is vapour permeable and allows drying. Expanded polystyrene (EPS) is another option. Wood fibre insulation is emerging as low embodied carbon option.
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            R-value
          </dt>
          <dd>
            thermal resistance, higher is better, the ability of an assembly to prevent heat flow, R-value is the inverse of U-value, R = 1/U
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            SHGC
          </dt>
          <dd>
            solar heat gain coefficient, defines how much solar gain is allowed in through a window, high solar gain 50% (for passive solar design), low solar gain 30% (if overheating is a risk)
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            U-value
          </dt>
          <dd>
            thermal transmittance or heat transfer coefficient, lower is better, the amount of heat that moves through an assembly for a unit area and temperature difference, U-value is the inverse of R-value, U = 1/R
          </dd>
        </div>
      </dl>
      <h3>
        Conversion Table
      </h3>
      <dl>
        <div
          className="row"
        >
          <dt>
            1 m
          </dt>
          <dd>
            3.28 ft
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            1 m²
          </dt>
          <dd>
            10.8 ft²
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            U-value [metric] 
          </dt>
          <dd>
            5.678 / R-value [imperial]
          </dd>
        </div>
        <div
          className="row"
        >
          <dt>
            R-value [imperial]
          </dt>
          <dd>
            5.678 / U-value [metric]
          </dd>
        </div>
      </dl>
      <img
        alt="Conversion table for U <> R"
        src="/img/conversion.png"
      />
      <h3>
        Technical Notes
      </h3>
      <ol>
        <li>
          Insulation effective R-values account for NBC 9.36 typical framing percentages.
        </li>
        <li>
          Contact 
          <a
            href="https://brightbuildings.ca/"
            rel="noreferrer"
            target="_blank"
          >
            Bright Buildings
          </a>
           for photos, details and schematics designs.
        </li>
      </ol>
    </div>
  </div>
</div>
`;
